修改 - 更新frpc.ini配置，设置server_addr、token、protocol及日志级别，调整心跳参数和登录失败处理逻辑。

--- a/frp/frpc.ini
+++ b/frp/frpc.ini
@@ -1,16 +1,20 @@
 [common]
-server_addr = []  # 服务端 ip 或域名
+server_addr = 47.107.152.139
 server_port = 7000
-token = "test123"
+token = test123
+protocol = websocket
+log_level = debug
+# log_file = /tmp/frpc.log
 
-[ssh]
+# 防止登录失败就退出（先保证进程不死）
+login_fail_exit = false
+
+# 心跳更频繁，避免中间网络/NAT把连接“静默掐掉”
+heartbeat_interval = 10
+heartbeat_timeout = 90
+
+[drone-web]
 type = tcp
-local_ip = 127.0.0.1
-local_port = 36000
-remote_port = 36001
-
-[drone-service]
-type = http
-local_ip = 127.0.0.1
+local_ip = 172.25.74.79
 local_port = 8080
-subdomain = drone
+remote_port = 8686
