--- a/frp/frps.ini
+++ b/frp/frps.ini
@@ -1,10 +1,12 @@
 [common]
+bind_addr = 0.0.0.0
 bind_port = 7000
-token = "test123"
+token = test123
+
+protocol = websocket
+
+log_level = debug
 
 dashboard_port = 7500
 dashboard_user = admin
-dashboard_pwd = 981221
-
-vhost_http_port = 8686
-subdomain_host = [xxx]  # 域名或ip
+dashboard_pwd = 371173
